tests/invalid/variables/var_declared_late.rs
/*
fail: 1
*/

main(): int {
    a = 1 + 2;
    a: int;
    return a;
}